--- a/index.html
+++ b/index.html
@@ -339,7 +339,13 @@ kbd {
 
 <h1 id="toc_3">!!! header中存放 type:分类，longitude:经度, latitude:纬度 有时候可能回放header，可能会放body，但是只认header的参数就好了</h1>
 
-<h3 id="toc_4">可配置页面说明</h3>
+<h3 id="toc_4">0708</h3>
+
+<p>首页样式 新增 category-travel-1</p>
+
+<p><img src="category-10.png" alt=""></p>
+
+<h3 id="toc_5">可配置页面说明</h3>
 
 <ul>
 <li> category/more  // 显示更多，且跳到列表</li>
@@ -465,7 +471,9 @@ detaillist:[
 
 <p><img src="product-detail.png" alt=""></p>
 
-<h3 id="toc_5">接口说明</h3>
+<h3 id="toc_6">接口说明</h3>
+
+<h4 id="toc_7">当subid不传，或为空，则默认传第一个tag的数据，前端将会默认选中第一个tag!!!</h4>
 
 <ul>
 <li>category/home-footer (首页footer更新接口)</li>
@@ -602,13 +610,13 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <li>category/message/taglist 进入im的时候的快速点击tag</li>
 </ul>
 
-<h2 id="toc_6">首页说明</h2>
+<h2 id="toc_8">首页说明</h2>
 
-<h2 id="toc_7">isMore 字段，是展示更多列表</h2>
+<h2 id="toc_9">isMore 字段，是展示更多列表</h2>
 
 <p><img src="first-level.png" alt=""></p>
 
-<h3 id="toc_8">总体来说分为三部分:</h3>
+<h3 id="toc_10">总体来说分为三部分:</h3>
 
 <ol>
 <li>header (search,tag,)</li>
@@ -616,19 +624,19 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <li>footer (recommend)</li>
 </ol>
 
-<h3 id="toc_9">header:</h3>
+<h3 id="toc_11">header:</h3>
 
 <p><img src="header.png" alt=""></p>
 
-<h3 id="toc_10">body:</h3>
+<h3 id="toc_12">body:</h3>
 
 <p><img src="body.png" alt=""></p>
 
-<h3 id="toc_11">footer:</h3>
+<h3 id="toc_13">footer:</h3>
 
 <p><img src="footer.png" alt=""></p>
 
-<h3 id="toc_12">主要是以body作为区分，样式包括：</h3>
+<h3 id="toc_14">主要是以body作为区分，样式包括：</h3>
 
 <p><img src="body-1.png" alt="">
 <img src="body-2.png" alt="">
@@ -636,7 +644,7 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <img src="body-4.png" alt="">
 <img src="body-5.png" alt=""></p>
 
-<h2 id="toc_13">nav_type(首页共用，body,footer):</h2>
+<h2 id="toc_15">nav_type(首页共用，body,footer):</h2>
 
 <div><pre><code class="language-none">* CATEGORY_COS_PRO_DETAIL (健康美容-商品详情)
 * CATEGORY_COS_SHOP_DETAIL (健康美容-商店详情)
@@ -664,47 +672,47 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 * type_video (跳转到视频)
 * type_url (跳转到url)</code></pre></div>
 
-<h3 id="toc_14">body细分样式：</h3>
+<h3 id="toc_16">body细分样式：</h3>
 
-<h3 id="toc_15">list:[productDetail]</h3>
+<h3 id="toc_17">list:[productDetail]</h3>
 
-<h4 id="toc_16">category-1 (一长两短)</h4>
+<h4 id="toc_18">category-1 (一长两短)</h4>
 
 <p><img src="category-1.png" alt=""></p>
 
-<h4 id="toc_17">category-2 (轮训)</h4>
+<h4 id="toc_19">category-2 (轮训)</h4>
 
 <p><img src="category-2.png" alt=""></p>
 
-<h4 id="toc_18">category-3 (无限右滑)</h4>
+<h4 id="toc_20">category-3 (无限右滑)</h4>
 
 <p><img src="category-3.png" alt=""></p>
 
-<h4 id="toc_19">category-4 (两短)</h4>
+<h4 id="toc_21">category-4 (两短)</h4>
 
 <p><img src="category-4.png" alt=""></p>
 
-<h4 id="toc_20">category-5 (两短 2)</h4>
+<h4 id="toc_22">category-5 (两短 2)</h4>
 
 <p><img src="category-5.png" alt=""></p>
 
-<h4 id="toc_21">category-6 (四短-带标题)</h4>
+<h4 id="toc_23">category-6 (四短-带标题)</h4>
 
 <p><img src="category-6.png" alt=""></p>
 
-<h4 id="toc_22">category-7 (一长带标题)</h4>
+<h4 id="toc_24">category-7 (一长带标题)</h4>
 
 <p><img src="category-7.png" alt=""></p>
 
-<h4 id="toc_23">category-8 (两短-带标题)</h4>
+<h4 id="toc_25">category-8 (两短-带标题)</h4>
 
 <p><img src="category-8.png" alt=""></p>
 
-<h4 id="toc_24">category-9 (无限右滑+分类)</h4>
+<h4 id="toc_26">category-9 (无限右滑+分类)</h4>
 
 <p><img src="category-9.png" alt=""></p>
 
-<h4 id="toc_25">category-tabs-1 (待分类)</h4>
+<h4 id="toc_27">category-tabs-1 (待分类)</h4>
 
 <p><img src="category-tabs-1.jpg" alt=""></p>
 
@@ -911,25 +919,25 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 
 <p><img src="category-10.png" alt=""></p>
 
-<h3 id="toc_26">footer:</h3>
+<h3 id="toc_28">footer:</h3>
 
-<h4 id="toc_27">footer-1 (带tag-cell-tag)</h4>
+<h4 id="toc_29">footer-1 (带tag-cell-tag)</h4>
 
 <p><img src="footer-1.png" alt=""></p>
 
-<h4 id="toc_28">footer-2 (瀑布流)</h4>
+<h4 id="toc_30">footer-2 (瀑布流)</h4>
 
 <p><img src="footer-3.png" alt=""></p>
 
-<h4 id="toc_29">footer-3 ()</h4>
+<h4 id="toc_31">footer-3 ()</h4>
 
 <p><img src="footer-6.png" alt=""></p>
 
-<h4 id="toc_30">footer-4 (带头像)</h4>
+<h4 id="toc_32">footer-4 (带头像)</h4>
 
 <p><img src="footer-7.png" alt=""></p>
 
-<h4 id="toc_31">footer-5 (带头像)</h4>
+<h4 id="toc_33">footer-5 (带头像)</h4>
 
 <p><img src="footer-2.png" alt=""></p>
 
@@ -1096,13 +1104,13 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
     ]
 }</code></pre></div>
 
-<h1 id="toc_32">Search Cell Style</h1>
+<h1 id="toc_34">Search Cell Style</h1>
 
-<h2 id="toc_33">与home-footer保持一致 （footer-1,footer-2...）</h2>
+<h2 id="toc_35">与home-footer保持一致 （footer-1,footer-2...）</h2>
 
 <p><img src="./cell-3.png" alt=""></p>
 
-<h3 id="toc_34">特别注意：</h3>
+<h3 id="toc_36">特别注意：</h3>
 
 <p>1.搜索商店时候：
 shop 
@@ -1194,102 +1202,102 @@ category/searchshop</p>
 }
 </code></pre></div>
 
-<h1 id="toc_35">API 描述：</h1>
+<h1 id="toc_37">API 描述：</h1>
 
-<h2 id="toc_36">首页：</h2>
+<h2 id="toc_38">首页：</h2>
 
 <p><img src="first-level.png" alt="">
 <img src="home-exa.png" alt=""></p>
 
-<h3 id="toc_37">红色部分： /tf/category/home</h3>
+<h3 id="toc_39">红色部分： /tf/category/home</h3>
 
-<h3 id="toc_38">红色部分-cell 更多： /tf/category/home-category</h3>
+<h3 id="toc_40">红色部分-cell 更多： /tf/category/home-category</h3>
 
-<h3 id="toc_39">绿色部分：/tf/category/home-footer</h3>
+<h3 id="toc_41">绿色部分：/tf/category/home-footer</h3>
 
 <hr>
 
-<h2 id="toc_40">商店详情</h2>
+<h2 id="toc_42">商店详情</h2>
 
 <p><img src="shop-detail.png" alt=""></p>
 
-<h3 id="toc_41">tf/category/shop</h3>
+<h3 id="toc_43">tf/category/shop</h3>
 
 <hr>
 
-<h2 id="toc_42">机构详情</h2>
+<h2 id="toc_44">机构详情</h2>
 
 <p><img src="shop-detail-sep.png" alt=""></p>
 
-<h3 id="toc_43">/tf/category/shopDetail</h3>
+<h3 id="toc_45">/tf/category/shopDetail</h3>
 
 <hr>
 
-<h2 id="toc_44">购物车分类</h2>
+<h2 id="toc_46">购物车分类</h2>
 
 <p><img src="shop-card-all.png" alt=""></p>
 
-<h3 id="toc_45">红色部分：/tf/category/shopMenu</h3>
+<h3 id="toc_47">红色部分：/tf/category/shopMenu</h3>
 
-<h3 id="toc_46">绿色部分：/tf/category/shopAll</h3>
+<h3 id="toc_48">绿色部分：/tf/category/shopAll</h3>
 
 <hr>
 
-<h2 id="toc_47">专家详情：</h2>
+<h2 id="toc_49">专家详情：</h2>
 
 <p><img src="exp-detail.png" alt=""></p>
 
-<h3 id="toc_48">/tf/category/expert</h3>
+<h3 id="toc_50">/tf/category/expert</h3>
 
 <hr>
 
 <p><img src="pro-d.png" alt=""></p>
 
-<h3 id="toc_49">/tf/category/productDetail</h3>
+<h3 id="toc_51">/tf/category/productDetail</h3>
 
 <hr>
 
-<h2 id="toc_50">各种推荐专用接口(用于各种详情下面的推荐)</h2>
+<h2 id="toc_52">各种推荐专用接口(用于各种详情下面的推荐)</h2>
 
-<h3 id="toc_51">/tf/category/productRecommend</h3>
+<h3 id="toc_53">/tf/category/productRecommend</h3>
 
-<h2 id="toc_52">评论专用接口(用于更多评论)</h2>
+<h2 id="toc_54">评论专用接口(用于更多评论)</h2>
 
-<h3 id="toc_53">/tf/category/productCommend</h3>
+<h3 id="toc_55">/tf/category/productCommend</h3>
 
-<h2 id="toc_54">筛选</h2>
+<h2 id="toc_56">筛选</h2>
 
 <p><img src="search.png" alt=""></p>
 
 <p><img src="search-type2.png" alt=""></p>
 
-<h3 id="toc_55">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
+<h3 id="toc_57">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
 
-<h3 id="toc_56">搜索商店 /tf/category/searchshop</h3>
+<h3 id="toc_58">搜索商店 /tf/category/searchshop</h3>
 
-<h3 id="toc_57">搜索商品 /tf/category/searchshop</h3>
+<h3 id="toc_59">搜索商品 /tf/category/searchshop</h3>
 
-<h2 id="toc_58">服务</h2>
+<h2 id="toc_60">服务</h2>
 
-<h3 id="toc_59">预约服务详情 /category/service/schedule</h3>
+<h3 id="toc_61">预约服务详情 /category/service/schedule</h3>
 
-<h3 id="toc_60">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
+<h3 id="toc_62">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
 
 <div><pre><code class="language-none"> &quot;schedule&quot;:[],##当 schedule = 5-1 的时候会出现
  &quot;list&quot;:[],
  &quot;dsp&quot;:&quot;预期说声哈&quot;</code></pre></div>
 
-<h5 id="toc_61">读取 schedule 字段</h5>
+<h5 id="toc_63">读取 schedule 字段</h5>
 
 <p><img src="service-1.png" alt=""></p>
 
-<h5 id="toc_62">读取 list 字段</h5>
+<h5 id="toc_64">读取 list 字段</h5>
 
 <p><img src="service-2.png" alt=""></p>
 
 <hr>
 
-<h3 id="toc_63">我的-预约列表 /category/service/list</h3>
+<h3 id="toc_65">我的-预约列表 /category/service/list</h3>
 
 <div><pre><code class="language-none">(全部)APPOINT_ALL, 
 (预约到店)SERVICE_OFFLINE, 
