--- a/index.html
+++ b/index.html
@@ -339,22 +339,13 @@ kbd {
 
 <h1 id="toc_3">!!! header中存放 type:分类，longitude:经度, latitude:纬度 有时候可能回放header，可能会放body，但是只认header的参数就好了</h1>
 
-<h3 id="toc_4">0723</h3>
+<h3 id="toc_4">0727</h3>
 
-<h4 id="toc_5">/tf/category/pay/baseInfo 确认订单基本信息：</h4>
+<h4 id="toc_5">body 新增type</h4>
 
-<p>传参：
-修改点：新增</p>
+<h3 id="toc_6">0723</h3>
 
-<div><pre><code class="language-none">泛型id: did, 支持商店id,专家id,商品id
-预约类型：appoint_type:
-专家：APPOINT_TYPE_EXPERT， 
-商店：APPOINT_TYPE_SHOP, 
-商品：APPOINT_TYPE_PRODUCT</code></pre></div>
-
-<h2 id="toc_6">返回值不变</h2>
-
-<h4 id="toc_7">/tf/category/service/schedule 获取可预约日期</h4>
+<h4 id="toc_7">/tf/category/pay/baseInfo 确认订单基本信息：</h4>
 
 <p>传参：
 修改点：新增</p>
@@ -367,7 +358,20 @@ kbd {
 
 <h2 id="toc_8">返回值不变</h2>
 
-<h4 id="toc_9">/tf/category/shop</h4>
+<h4 id="toc_9">/tf/category/service/schedule 获取可预约日期</h4>
+
+<p>传参：
+修改点：新增</p>
+
+<div><pre><code class="language-none">泛型id: did, 支持商店id,专家id,商品id
+预约类型：appoint_type:
+专家：APPOINT_TYPE_EXPERT， 
+商店：APPOINT_TYPE_SHOP, 
+商品：APPOINT_TYPE_PRODUCT</code></pre></div>
+
+<h2 id="toc_10">返回值不变</h2>
+
+<h4 id="toc_11">/tf/category/shop</h4>
 
 <p>传参：
 修改点：新增</p>
@@ -377,11 +381,11 @@ kbd {
 商店：APPOINT_TYPE_SHOP, 
 商品：APPOINT_TYPE_PRODUCT</code></pre></div>
 
-<h2 id="toc_10">返回值不变</h2>
+<h2 id="toc_12">返回值不变</h2>
 
-<h4 id="toc_11">/tf/category/service/list 预约中心</h4>
+<h4 id="toc_13">/tf/category/service/list 预约中心</h4>
 
-<h5 id="toc_12">传参 :</h5>
+<h5 id="toc_14">传参 :</h5>
 
 <p>修改点：原来的type,改为appoint_type</p>
 
@@ -417,17 +421,17 @@ example:
 }
 ]</code></pre></div>
 
-<h3 id="toc_13">0716</h3>
+<h3 id="toc_15">0716</h3>
 
 <p>新增首页跳转 type_more</p>
 
-<h3 id="toc_14">0708</h3>
+<h3 id="toc_16">0708</h3>
 
 <p>首页样式 新增 category-travel-1</p>
 
 <p><img src="category-10.png" alt=""></p>
 
-<h3 id="toc_15">可配置页面说明</h3>
+<h3 id="toc_17">可配置页面说明</h3>
 
 <ul>
 <li> category/more  // 显示更多，且跳到列表</li>
@@ -553,9 +557,9 @@ detaillist:[
 
 <p><img src="product-detail.png" alt=""></p>
 
-<h3 id="toc_16">接口说明</h3>
+<h3 id="toc_18">接口说明</h3>
 
-<h4 id="toc_17">当subid不传，或为空，则默认传第一个tag的数据，前端将会默认选中第一个tag!!!</h4>
+<h4 id="toc_19">当subid不传，或为空，则默认传第一个tag的数据，前端将会默认选中第一个tag!!!</h4>
 
 <ul>
 <li>category/home-footer (首页footer更新接口)</li>
@@ -692,13 +696,13 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <li>category/message/taglist 进入im的时候的快速点击tag</li>
 </ul>
 
-<h2 id="toc_18">首页说明</h2>
+<h2 id="toc_20">首页说明</h2>
 
-<h2 id="toc_19">isMore 字段，是展示更多列表</h2>
+<h2 id="toc_21">isMore 字段，是展示更多列表</h2>
 
 <p><img src="first-level.png" alt=""></p>
 
-<h3 id="toc_20">总体来说分为三部分:</h3>
+<h3 id="toc_22">总体来说分为三部分:</h3>
 
 <ol>
 <li>header (search,tag,)</li>
@@ -706,19 +710,19 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <li>footer (recommend)</li>
 </ol>
 
-<h3 id="toc_21">header:</h3>
+<h3 id="toc_23">header:</h3>
 
 <p><img src="header.png" alt=""></p>
 
-<h3 id="toc_22">body:</h3>
+<h3 id="toc_24">body:</h3>
 
 <p><img src="body.png" alt=""></p>
 
-<h3 id="toc_23">footer:</h3>
+<h3 id="toc_25">footer:</h3>
 
 <p><img src="footer.png" alt=""></p>
 
-<h3 id="toc_24">主要是以body作为区分，样式包括：</h3>
+<h3 id="toc_26">主要是以body作为区分，样式包括：</h3>
 
 <p><img src="body-1.png" alt="">
 <img src="body-2.png" alt="">
@@ -726,7 +730,7 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 <img src="body-4.png" alt="">
 <img src="body-5.png" alt=""></p>
 
-<h2 id="toc_25">nav_type(首页共用，body,footer):</h2>
+<h2 id="toc_27">nav_type(首页共用，body,footer):</h2>
 
 <div><pre><code class="language-none">* CATEGORY_COS_PRO_DETAIL (健康美容-商品详情)
 * CATEGORY_COS_SHOP_DETAIL (健康美容-商店详情)
@@ -755,272 +759,91 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
 * type_url (跳转到url)
 * type_more (跳转更多列表)</code></pre></div>
 
-<h3 id="toc_26">body细分样式：</h3>
+<h3 id="toc_28">body细分样式：</h3>
 
-<h3 id="toc_27">list:[productDetail]</h3>
+<h3 id="toc_29">list:[productDetail]</h3>
 
-<h4 id="toc_28">category-1 (一长两短)</h4>
+<h4 id="toc_30">category-1 (一长两短)</h4>
 
 <p><img src="category-1.png" alt=""></p>
 
-<h4 id="toc_29">category-2 (轮训)</h4>
+<h4 id="toc_31">category-2 (轮训)</h4>
 
 <p><img src="category-2.png" alt=""></p>
 
-<h4 id="toc_30">category-3 (无限右滑)</h4>
+<h4 id="toc_32">category-3 (无限右滑)</h4>
 
 <p><img src="category-3.png" alt=""></p>
 
-<h4 id="toc_31">category-4 (两短)</h4>
+<h4 id="toc_33">category-4 (两短)</h4>
 
 <p><img src="category-4.png" alt=""></p>
 
-<h4 id="toc_32">category-5 (两短 2)</h4>
+<h4 id="toc_34">category-5 (两短 2)</h4>
 
 <p><img src="category-5.png" alt=""></p>
 
-<h4 id="toc_33">category-6 (四短-带标题)</h4>
+<h4 id="toc_35">category-6 (四短-带标题)</h4>
 
 <p><img src="category-6.png" alt=""></p>
 
-<h4 id="toc_34">category-7 (一长带标题)</h4>
+<h4 id="toc_36">category-7 (一长带标题)</h4>
 
 <p><img src="category-7.png" alt=""></p>
 
-<h4 id="toc_35">category-8 (两短-带标题)</h4>
+<h4 id="toc_37">category-8 (两短-带标题)</h4>
 
 <p><img src="category-8.png" alt=""></p>
 
-<h4 id="toc_36">category-9 (无限右滑+分类)</h4>
+<h4 id="toc_38">category-9 (无限右滑+分类)</h4>
 
 <p><img src="category-9.png" alt=""></p>
 
-<h4 id="toc_37">category-tabs-1 (待分类)</h4>
-
-<p><img src="category-tabs-1.jpg" alt=""></p>
-
-<div><pre><code class="language-none">
-    &quot;category-1&quot;: {
-        &quot;nav_type&quot;: &quot;CATEGORY_EDU_PRO_DETAIL&quot;,
-        &quot;title&quot;: &quot;国际形象设计名师班&quot;,
-        &quot;discout&quot;: &quot;&quot;,
-        &quot;id&quot;: &quot;1&quot;,
-        &quot;name&quot;: &quot;国际形象设计名师班&quot;,
-        &quot;score&quot;: 4.0,
-        &quot;selNum&quot;: 100,
-        &quot;price&quot;: 1980,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [
-            &quot;课程形式：小班授课&quot;,
-            &quot;适用阶段:宁基础入门&quot;
-        ],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
-        ]
-    },</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-2&quot;: {
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;,
-        &quot;id&quot;: &quot;asdf&quot;,
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1621173621200&quot;
-        ],
-        &quot;url&quot;: &quot;http://www.baidu.com&quot;
-    },</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-3&quot;: {
-        &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-        &quot;name&quot;: &quot;0基础培训课程&quot;,
-        &quot;score&quot;: 4.0,
-        &quot;selNum&quot;: 100,
-        &quot;price&quot;: 1980,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [
-            &quot;课程形式：小班授课&quot;,
-            &quot;适用阶段:宁基础入门&quot;
-        ],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    }
-</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-4&quot;: {
-        &quot;nav_type&quot;: &quot;type_url&quot;,
-        &quot;id&quot;: &quot;1&quot;,
-        &quot;imagePath&quot;: &quot;http://112.74.166.59:5000/public/download/1621170599309&quot;,
-        &quot;url&quot;: &quot;http://www.baidu.com&quot;
-    },</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-5&quot;: {
-        &quot;title&quot;: &quot;特价机票抢购&quot;,
-        &quot;discout&quot;: &quot;5.0&quot;,
-        &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-        &quot;name&quot;: &quot;0基础培训课程&quot;,
-        &quot;score&quot;: 4.0,
-        &quot;selNum&quot;: 100,
-        &quot;price&quot;: 1980,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [
-            &quot;课程形式：小班授课&quot;,
-            &quot;适用阶段:宁基础入门&quot;
-        ],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    },
-    </code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-6&quot;: {
-        &quot;title&quot;: &quot;特价机票抢购&quot;,
-        &quot;discout&quot;: &quot;5.0&quot;,
-        &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-        &quot;name&quot;: &quot;0基础培训课程&quot;,
-        &quot;score&quot;: 4.0,
-        &quot;selNum&quot;: 100,
-        &quot;price&quot;: 1980,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [
-            &quot;课程形式：小班授课&quot;,
-            &quot;适用阶段:宁基础入门&quot;
-        ],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    },
-    </code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-7&quot;: {
-        &quot;videoList&quot;: [
-            {
-                &quot;id&quot;: &quot;1&quot;,
-                &quot;url&quot;: &quot;http://112.74.166.59:5000/public/video/test.MP4&quot;,
-                &quot;visNum&quot;: &quot;20&quot;,
-                &quot;timeDis&quot;: &quot;4:00&quot;
-            }
-        ],
-        &quot;title&quot;: &quot;大品牌春季套装试穿直播回放，优雅新美学&quot;,
-        &quot;discout&quot;: &quot;5.0&quot;,
-        &quot;id&quot;: &quot;1&quot;,
-        &quot;name&quot;: &quot;大品牌春季套装试穿&quot;,
-        &quot;score&quot;: 0.0,
-        &quot;selNum&quot;: 0,
-        &quot;price&quot;: 0,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1621125217128&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    }</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-8&quot;: {
-        &quot;videoList&quot;: [
-            {
-                &quot;id&quot;: &quot;1&quot;,
-                &quot;url&quot;: &quot;http://112.74.166.59:5000/public/video/test.MP4&quot;,
-                &quot;visNum&quot;: &quot;20&quot;,
-                &quot;timeDis&quot;: &quot;4:00&quot;
-            }
-        ],
-        &quot;title&quot;: &quot;大品牌春季套装试穿直播回放，优雅新美学&quot;,
-        &quot;discout&quot;: &quot;5.0&quot;,
-        &quot;id&quot;: &quot;1&quot;,
-        &quot;name&quot;: &quot;大品牌春季套装试穿&quot;,
-        &quot;score&quot;: 0.0,
-        &quot;selNum&quot;: 0,
-        &quot;price&quot;: 0,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1621125217128&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    }
-</code></pre></div>
-
-<div><pre><code class="language-none">    &quot;category-9&quot;: {
-        &quot;videoList&quot;: [
-            {
-                &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-                &quot;url&quot;: &quot;http://www.baidu.com&quot;,
-                &quot;visNum&quot;: &quot;20&quot;,
-                &quot;timeDis&quot;: &quot;4:00&quot;
-            },
-            {
-                &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-                &quot;url&quot;: &quot;http://www.baidu.com&quot;,
-                &quot;visNum&quot;: &quot;20&quot;,
-                &quot;timeDis&quot;: &quot;4:00&quot;
-            }
-        ],
-        &quot;title&quot;: &quot;特价机票抢购&quot;,
-        &quot;discout&quot;: &quot;5.0&quot;,
-        &quot;id&quot;: &quot;asdfaefasdfasdf&quot;,
-        &quot;name&quot;: &quot;0基础培训课程&quot;,
-        &quot;score&quot;: 4.0,
-        &quot;selNum&quot;: 100,
-        &quot;price&quot;: 1980,
-        &quot;commentNum&quot;: 2000,
-        &quot;marketPrice&quot;: 2000,
-        &quot;desp&quot;: [
-            &quot;课程形式：小班授课&quot;,
-            &quot;适用阶段:宁基础入门&quot;
-        ],
-        &quot;imageList&quot;: [
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;,
-            &quot;http://112.74.166.59:5000/public/download/1616941007514&quot;
-        ],
-        &quot;nav_type&quot;: &quot;CATEGORY_MEDICAL_PRO_DETAIL&quot;
-    }
-}</code></pre></div>
-
-<div><pre><code class="language-none">category-10 旅游热门推荐（无限右滑）</code></pre></div>
+<h4 id="toc_39">category-10 热门推荐（无限右滑）</h4>
 
 <p><img src="category-10.png" alt=""></p>
 
-<h3 id="toc_38">footer:</h3>
+<h4 id="toc_40">category-tabs-1 (品质机构无限右滑)</h4>
 
-<h4 id="toc_39">footer-1 (带tag-cell-tag)</h4>
+<p><img src="category-tabs-1.jpg" alt=""></p>
+
+<h4 id="toc_41">category-travel-1 旅游热门推荐（无限右滑）</h4>
+
+<p><img src="category-10.png" alt=""></p>
+
+<hr>
+
+<h2 id="toc_42">只有在目的地才能使用</h2>
+
+<h4 id="toc_43">category-11(目的地 特色体验-无限右滑)</h4>
+
+<p><img src="category-11.png" alt=""></p>
+
+<h4 id="toc_44">category-12 (目的地 特色体验-无限右滑)</h4>
+
+<p><img src="category-12.png" alt=""></p>
+
+<hr>
+
+<h3 id="toc_45">footer:</h3>
+
+<h4 id="toc_46">footer-1 (带tag-cell-tag)</h4>
 
 <p><img src="footer-1.png" alt=""></p>
 
-<h4 id="toc_40">footer-2 (瀑布流)</h4>
+<h4 id="toc_47">footer-2 (瀑布流)</h4>
 
 <p><img src="footer-3.png" alt=""></p>
 
-<h4 id="toc_41">footer-3 ()</h4>
+<h4 id="toc_48">footer-3 ()</h4>
 
 <p><img src="footer-6.png" alt=""></p>
 
-<h4 id="toc_42">footer-4 (带头像)</h4>
+<h4 id="toc_49">footer-4 (带头像)</h4>
 
 <p><img src="footer-7.png" alt=""></p>
 
-<h4 id="toc_43">footer-5 (带头像)</h4>
+<h4 id="toc_50">footer-5 (带头像)</h4>
 
 <p><img src="footer-2.png" alt=""></p>
 
@@ -1187,13 +1010,13 @@ travelInfo:&quot;[{ 商店id:[{&#39;id&#39;:商品id,
     ]
 }</code></pre></div>
 
-<h1 id="toc_44">Search Cell Style</h1>
+<h1 id="toc_51">Search Cell Style</h1>
 
-<h2 id="toc_45">与home-footer保持一致 （footer-1,footer-2...）</h2>
+<h2 id="toc_52">与home-footer保持一致 （footer-1,footer-2...）</h2>
 
 <p><img src="./cell-3.png" alt=""></p>
 
-<h3 id="toc_46">特别注意：</h3>
+<h3 id="toc_53">特别注意：</h3>
 
 <p>1.搜索商店时候：
 shop 
@@ -1285,102 +1108,102 @@ category/searchshop</p>
 }
 </code></pre></div>
 
-<h1 id="toc_47">API 描述：</h1>
+<h1 id="toc_54">API 描述：</h1>
 
-<h2 id="toc_48">首页：</h2>
+<h2 id="toc_55">首页：</h2>
 
 <p><img src="first-level.png" alt="">
 <img src="home-exa.png" alt=""></p>
 
-<h3 id="toc_49">红色部分： /tf/category/home</h3>
+<h3 id="toc_56">红色部分： /tf/category/home</h3>
 
-<h3 id="toc_50">红色部分-cell 更多： /tf/category/home-category</h3>
+<h3 id="toc_57">红色部分-cell 更多： /tf/category/home-category</h3>
 
-<h3 id="toc_51">绿色部分：/tf/category/home-footer</h3>
+<h3 id="toc_58">绿色部分：/tf/category/home-footer</h3>
 
 <hr>
 
-<h2 id="toc_52">商店详情</h2>
+<h2 id="toc_59">商店详情</h2>
 
 <p><img src="shop-detail.png" alt=""></p>
 
-<h3 id="toc_53">tf/category/shop</h3>
+<h3 id="toc_60">tf/category/shop</h3>
 
 <hr>
 
-<h2 id="toc_54">机构详情</h2>
+<h2 id="toc_61">机构详情</h2>
 
 <p><img src="shop-detail-sep.png" alt=""></p>
 
-<h3 id="toc_55">/tf/category/shopDetail</h3>
+<h3 id="toc_62">/tf/category/shopDetail</h3>
 
 <hr>
 
-<h2 id="toc_56">购物车分类</h2>
+<h2 id="toc_63">购物车分类</h2>
 
 <p><img src="shop-card-all.png" alt=""></p>
 
-<h3 id="toc_57">红色部分：/tf/category/shopMenu</h3>
+<h3 id="toc_64">红色部分：/tf/category/shopMenu</h3>
 
-<h3 id="toc_58">绿色部分：/tf/category/shopAll</h3>
+<h3 id="toc_65">绿色部分：/tf/category/shopAll</h3>
 
 <hr>
 
-<h2 id="toc_59">专家详情：</h2>
+<h2 id="toc_66">专家详情：</h2>
 
 <p><img src="exp-detail.png" alt=""></p>
 
-<h3 id="toc_60">/tf/category/expert</h3>
+<h3 id="toc_67">/tf/category/expert</h3>
 
 <hr>
 
 <p><img src="pro-d.png" alt=""></p>
 
-<h3 id="toc_61">/tf/category/productDetail</h3>
+<h3 id="toc_68">/tf/category/productDetail</h3>
 
 <hr>
 
-<h2 id="toc_62">各种推荐专用接口(用于各种详情下面的推荐)</h2>
+<h2 id="toc_69">各种推荐专用接口(用于各种详情下面的推荐)</h2>
 
-<h3 id="toc_63">/tf/category/productRecommend</h3>
+<h3 id="toc_70">/tf/category/productRecommend</h3>
 
-<h2 id="toc_64">评论专用接口(用于更多评论)</h2>
+<h2 id="toc_71">评论专用接口(用于更多评论)</h2>
 
-<h3 id="toc_65">/tf/category/productCommend</h3>
+<h3 id="toc_72">/tf/category/productCommend</h3>
 
-<h2 id="toc_66">筛选</h2>
+<h2 id="toc_73">筛选</h2>
 
 <p><img src="search.png" alt=""></p>
 
 <p><img src="search-type2.png" alt=""></p>
 
-<h3 id="toc_67">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
+<h3 id="toc_74">/tf/category/searchType 包括排序和筛选(可多选)，头部分类（图片可以无）</h3>
 
-<h3 id="toc_68">搜索商店 /tf/category/searchshop</h3>
+<h3 id="toc_75">搜索商店 /tf/category/searchshop</h3>
 
-<h3 id="toc_69">搜索商品 /tf/category/searchshop</h3>
+<h3 id="toc_76">搜索商品 /tf/category/searchshop</h3>
 
-<h2 id="toc_70">服务</h2>
+<h2 id="toc_77">服务</h2>
 
-<h3 id="toc_71">预约服务详情 /category/service/schedule</h3>
+<h3 id="toc_78">预约服务详情 /category/service/schedule</h3>
 
-<h3 id="toc_72">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
+<h3 id="toc_79">schedule, list两个对应两种不同的UI, schedule的优先级会更高</h3>
 
 <div><pre><code class="language-none"> &quot;schedule&quot;:[],##当 schedule = 5-1 的时候会出现
  &quot;list&quot;:[],
  &quot;dsp&quot;:&quot;预期说声哈&quot;</code></pre></div>
 
-<h5 id="toc_73">读取 schedule 字段</h5>
+<h5 id="toc_80">读取 schedule 字段</h5>
 
 <p><img src="service-1.png" alt=""></p>
 
-<h5 id="toc_74">读取 list 字段</h5>
+<h5 id="toc_81">读取 list 字段</h5>
 
 <p><img src="service-2.png" alt=""></p>
 
 <hr>
 
-<h3 id="toc_75">我的-预约列表 /category/service/list</h3>
+<h3 id="toc_82">我的-预约列表 /category/service/list</h3>
 
 <div><pre><code class="language-none">(全部)APPOINT_ALL, 
 (预约到店)SERVICE_OFFLINE, 
